src/deps/libuv.zig


const sockaddr_in = std.os.linux.sockaddr.in;
const sockaddr_in6 = std.os.linux.sockaddr.in6;
pub const addr_union = extern union {
    address4: std.os.linux.sockaddr.in,
    address6: std.os.linux.sockaddr.in6,
};
const netmask_union = extern union {
    netmask4: std.os.linux.sockaddr.in,
    netmask6: std.os.linux.sockaddr.in6,
};
pub const uv_interface_address_t = extern struct {
    name: [*:0]u8,
    phys_addr: [6]u8,
    is_internal: c_int,
    address: addr_union,
    netmask: netmask_union,
};
pub const struct_uv_passwd_s = extern struct {
    username: [*]u8,
    uid: c_ulong,
    gid: c_ulong,
    shell: [*]u8,
    homedir: [*]u8,
};
pub const uv_passwd_t = struct_uv_passwd_s;
pub const struct_uv_group_s = extern struct {
    groupname: [*]u8,
    gid: c_ulong,
    members: [*c][*]u8,
};
pub const uv_group_t = struct_uv_group_s;
pub const struct_uv_utsname_s = extern struct {
    sysname: [255:0]u8,
    release: [255:0]u8,
    version: [255:0]u8,
    machine: [255:0]u8,

    comptime {
        std.debug.assert(@sizeOf(struct_uv_utsname_s) == 256 * 4);
    }
};
pub const uv_utsname_t = struct_uv_utsname_s;
pub const struct_uv_statfs_s = extern struct {
    f_type: u64,
    f_bsize: u64,
    f_blocks: u64,
    f_bfree: u64,
    f_bavail: u64,
    f_files: u64,
    f_ffree: u64,
    f_spare: [4]u64,
};
pub const uv_statfs_t = struct_uv_statfs_s;
pub const struct_uv_metrics_s = extern struct {
    loop_count: u64,
    events: u64,
    events_waiting: u64,
    reserved: [13][*c]u64,
};
pub const uv_metrics_t = struct_uv_metrics_s;
pub const UV_LOOP_BLOCK_SIGNAL: c_int = 0;
pub const UV_METRICS_IDLE_TIME: c_int = 1;
pub const uv_loop_option = c_uint;
pub const UV_RUN_DEFAULT: c_int = 0;
pub const UV_RUN_ONCE: c_int = 1;
pub const UV_RUN_NOWAIT: c_int = 2;
pub const uv_run_mode = c_uint;
pub const RunMode = enum(c_uint) {
    default = 0,
    once = 1,
    nowait = 2,
};
pub extern fn uv_version() c_uint;
pub extern fn uv_version_string() [*:0]const u8;
pub const uv_malloc_func = ?*const fn (usize) callconv(.C) ?*anyopaque;
pub const uv_realloc_func = ?*const fn (?*anyopaque, usize) callconv(.C) ?*anyopaque;
pub const uv_calloc_func = ?*const fn (usize, usize) callconv(.C) ?*anyopaque;
pub const uv_free_func = ?*const fn (?*anyopaque) callconv(.C) void;
pub extern fn uv_library_shutdown() void;
pub extern fn uv_replace_allocator(malloc_func: uv_malloc_func, realloc_func: uv_realloc_func, calloc_func: uv_calloc_func, free_func: uv_free_func) c_int;
pub extern fn uv_default_loop() *uv_loop_t;
pub extern fn uv_loop_init(loop: *uv_loop_t) ReturnCode;
pub extern fn uv_loop_close(loop: *uv_loop_t) c_int;
pub extern fn uv_loop_new() *uv_loop_t;
pub extern fn uv_loop_delete(*uv_loop_t) void;
pub extern fn uv_loop_size() usize;
pub extern fn uv_loop_alive(loop: *const uv_loop_t) c_int;
pub extern fn uv_loop_configure(loop: *uv_loop_t, option: uv_loop_option, ...) c_int;
pub extern fn uv_loop_fork(loop: *uv_loop_t) c_int;
pub extern fn uv_run(*uv_loop_t, mode: RunMode) c_int;
pub extern fn uv_stop(*uv_loop_t) void;
pub extern fn uv_ref([*c]uv_handle_t) void;
pub extern fn uv_unref([*c]uv_handle_t) void;
pub extern fn uv_has_ref([*c]const uv_handle_t) c_int;
pub extern fn uv_update_time(*uv_loop_t) void;
pub extern fn uv_now([*c]const uv_loop_t) u64;
pub extern fn uv_backend_fd([*c]const uv_loop_t) c_int;
pub extern fn uv_backend_timeout([*c]const uv_loop_t) c_int;
pub const uv_walk_cb = ?*const fn ([*c]uv_handle_t, ?*anyopaque) callconv(.C) void;
pub const UV_CLOCK_MONOTONIC: c_int = 0;
pub const UV_CLOCK_REALTIME: c_int = 1;
pub const uv_clock_id = c_uint;
pub const uv_timespec_t = extern struct {
    tv_sec: c_long,
    tv_nsec: c_long,
};
pub const uv_timespec64_t = extern struct {
    tv_sec: i64,
    tv_nsec: i32,
};
pub const uv_timeval_t = extern struct {
    tv_sec: c_long,
    tv_usec: c_long,
};
pub const uv_timeval64_t = extern struct {
    tv_sec: i64,
    tv_usec: i32,
};
pub const uv_stat_t = extern struct {
    dev: u64,
    mode: u64,
    nlink: u64,
    uid: u64,
    gid: u64,
    rdev: u64,
    ino: u64,
    size: u64,
    blksize: u64,
    blocks: u64,
    flags: u64,
    gen: u64,
    atim: uv_timespec_t,
    mtim: uv_timespec_t,
    ctim: uv_timespec_t,
    birthtim: uv_timespec_t,

    pub fn atime(self: @This()) uv_timespec_t {
        return self.atim;
    }

    pub fn mtime(self: @This()) uv_timespec_t {
        return self.mtim;
    }

    pub fn ctime(self: @This()) uv_timespec_t {
        return self.ctim;
    }
